--- a/RestaurantReviews/Base.lproj/Main.storyboard
+++ b/RestaurantReviews/Base.lproj/Main.storyboard
@@ -24,9 +24,18 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MoP-bm-B2j">
                                 <rect key="frame" x="0.0" y="64" width="375" height="200"/>
+                                <subviews>
+                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="auz-yC-1th">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                                    </mapView>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="Dcl-W2-3EX"/>
+                                    <constraint firstAttribute="trailing" secondItem="auz-yC-1th" secondAttribute="trailing" id="R4v-Jy-fl3"/>
+                                    <constraint firstAttribute="bottom" secondItem="auz-yC-1th" secondAttribute="bottom" id="SGE-e5-nSo"/>
+                                    <constraint firstItem="auz-yC-1th" firstAttribute="leading" secondItem="MoP-bm-B2j" secondAttribute="leading" id="WPB-bv-T2Y"/>
+                                    <constraint firstItem="auz-yC-1th" firstAttribute="top" secondItem="MoP-bm-B2j" secondAttribute="top" id="dUB-vn-VHd"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6RN-QN-ScV">
@@ -57,6 +66,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="QBS-Qd-y7q"/>
                     <connections>
+                        <outlet property="mapView" destination="auz-yC-1th" id="o21-j9-2RR"/>
                         <outlet property="tableView" destination="6RN-QN-ScV" id="6Rd-n8-NsV"/>
                         <segue destination="lYs-e0-iaA" kind="show" identifier="showBusiness" id="vbb-yy-G8t"/>
                     </connections>
@@ -168,7 +178,7 @@
                                                 <constraint firstAttribute="height" constant="60" id="jca-Dn-XT1"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JyG-1E-vnL">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JyG-1E-vnL">
                                             <rect key="frame" x="84" y="16" width="275" height="59.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="textColor"/>
@@ -206,7 +216,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eO6-g4-89C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1047" y="37"/>
+            <point key="canvasLocation" x="1045.5999999999999" y="36.431784107946029"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="HSO-9n-z3v">
